fix: fixed element shifting in ACP menu that's been bothering me for 5-ish years

--- a/public/less/admin/header.less
+++ b/public/less/admin/header.less
@@ -98,10 +98,12 @@
 		> li {
 			float: left;
 			margin-right: 30px;
+			padding-bottom: 10px;
+			border-bottom: 4px solid transparent;
+			transition: border-color 150ms linear;
 
 			&.active {
-				border-bottom: 4px solid @brand-primary;
-    			padding-bottom: 10px;
+				border-color: @brand-primary;
 			}
 
 			> a {
